--- a/DevOps.VersionControl.Functions.GetGitHubApiCredentials/DevOps.VersionControl.Functions.GetGitHubApiCredentials.csproj
+++ b/DevOps.VersionControl.Functions.GetGitHubApiCredentials/DevOps.VersionControl.Functions.GetGitHubApiCredentials.csproj
@@ -1,7 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <LangVersion>latest</LangVersion>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+
+  <PropertyGroup>
+    <Authors>cdorst</Authors>
+    <Description>Helper for getting GitHub API Basic Authentication credentials</Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>CDorst.DevOps.VersionControl.Functions.GetGitHubApiCredentials</PackageId>
+    <Version>1.0.0</Version>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CDorst.Common.Functions.PostJsonWithBasicAuthentication" Version="2.0.0" />
+  </ItemGroup>
 
 </Project>
