--- a/DevOps.VersionControl.Functions.GetGitHubApiCredentials/DevOps.VersionControl.Functions.GetGitHubApiCredentials.csproj
+++ b/DevOps.VersionControl.Functions.GetGitHubApiCredentials/DevOps.VersionControl.Functions.GetGitHubApiCredentials.csproj
@@ -10,11 +10,11 @@
     <Description>Helper for getting GitHub API Basic Authentication credentials</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageId>CDorst.DevOps.VersionControl.Functions.GetGitHubApiCredentials</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CDorst.Common.Functions.PostJsonWithBasicAuthentication" Version="2.0.0" />
+    <PackageReference Include="CDorst.Common.Structures.HttpBasicAuthentication" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
